pilot/test/integration/testdata/external-service.yaml
# Example external service for egress
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  type: ExternalName
  externalName: httpbin.org
  ports:
  - port: 80
    # important to define the protocol
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: httpsgoogle
spec:
  type: ExternalName
  externalName: www.google.com
  ports:
  - port: 443
    # important to define the protocol
    name: https
---
