pilot/test/integration/testdata/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: secured-ingress
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  tls:
    - secretName: ingress
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: a
          servicePort: http
      - path: /pasta
        backend:
          serviceName: b
          servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: regular-ingress
  # annotation not necessary for default controller mode
spec:
  rules:
  - http:
      paths:
      - path: /lucky
        backend:
          serviceName: a
          servicePort: 8080
      - path: /lo.*
        backend:
          serviceName: b
          servicePort: 80
      - path: /c
        backend:
          serviceName: c
          servicePort: http
  - host: foo.bar.com
    http:
      paths:
      - path: /foo
        backend:
          serviceName: a
          servicePort: 8080
  - host: "*.baz.com"
    http:
      paths:
      - path: /bar
        backend:
          serviceName: a
          servicePort: 8080
